# songs_downloader

./: README.md  main.py  names.py  normalizer.py  pyproject.toml  renamer.py  requirements.txt  settings.py  songs_list.py  threading_thing.py
trim_fork/: metadata.py  my_downloader.py  renamer.py  tagger.py
