[tool.poetry]
name = "songs_downloader"
version = "0.1.0"
description = ""
authors = ["Andrey <Bakarbyikov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.63.1"
loguru = "^0.6.0"
pytube = "^12.0.0"
pydub = "^0.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
